testsuite/tests/th/T17379a.stderr

T17379a.hs:8:2: error: [GHC-38140]
    GadtC must have at least one constructor name
    When splicing a TH declaration: data T where :: T
